break out and use the official api

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "chatgpt",
+  "name": "gptsam",
   "version": "5.1.2",
-  "description": "Node.js client for the official ChatGPT API.",
-  "author": "Travis Fischer <travis@transitivebullsh.it>",
-  "repository": "transitive-bullshit/chatgpt-api",
+  "description": "CLI Client for the OpenAI ChatGPT API",
+  "author": "Andrew Miracle <me@andrewmiracle.com> (https://andrewmiracle.com)",
+  "repository": "koolamusic/gptsam",
   "license": "MIT",
   "type": "module",
   "source": "./src/index.ts",
@@ -39,6 +39,7 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "cac": "^6.7.14",
+    "chalk": "^5.2.0",
     "conf": "^11.0.1",
     "eventsource-parser": "^0.0.5",
     "keyv": "^4.5.2",
@@ -73,11 +74,14 @@
   "keywords": [
     "openai",
     "chatgpt",
+    "gpt cli",
+    "cli",
+    "ai cli",
     "chat",
     "gpt",
-    "gpt-3",
+    "gpt-3 cli",
     "gpt3",
-    "gpt4",
+    "gpt4 cli",
     "chatbot",
     "machine learning",
     "conversation",
